Remove maven compiler options for lombok and java9.